--- a/css/style.css
+++ b/css/style.css
@@ -181,7 +181,7 @@ body .section .popups .popup-container .popup-items {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 100vh;
+  //height: 100vh;
   position: relative;
   overflow: auto;
 }
